...
                        .onAppear { nameFieldFocused = true }
                        .ignoresSafeArea()
                        
                        .frame(maxWidth: .infinity,maxHeight: .infinity, alignment: .topLeading)
                        .padding(EdgeInsets(top: 25, leading: 5, bottom: 5, trailing: 5))
                        
                        .navigationTitle("Rename Folder")
                        .navigationBarTitleDisplayMode(.inline)
                        .navigationBarItems(trailing:
                                                
                                                HStack {
                                                    Button(action: {
                                                        self.showSheetView = false
...
                                                            renameFolder()
                                                        }
                                                        else {
                                                            shouldAlertForEmptyFolderName.toggle()
                                                        }
                                                    }) {
                                                        Text("Save").bold()
                                                    } 
                                                }
                                            
                        )
                    
                }
...
